Bug 121671 - After reopen document, floating toolbars are hidden or at wrong position
Summary: After reopen document, floating toolbars are hidden or at wrong position
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
6.0.3.2 release
Hardware: All All
: medium normal
Assignee: Ilhan Yesil
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-23 11:35 UTC by Ilhan Yesil
Modified: 2019-05-16 13:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Relative position of floating toolbar not saved correctly (7.86 MB, video/avi)
2018-11-27 08:31 UTC, Ilhan Yesil
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ilhan Yesil 2018-11-23 11:35:20 UTC
Description:
After reopen a document, expectation would be that toolbars in floating mode keep their relative position to the document and keep their visibility. This is not always the case. Visibility problems observed under Debian, but not Windows.

Steps to Reproduce:
1. Open a writer document.
2. Position a floating toolbar somewhere.
3. Move the document from PosA to PosB, so that the relative position to the floating toolbar changes.
4. Close and open document. 

Actual Results:
Sometimes under debian, it's not visible anymore.
If visible, the relative position is wrong, the document is on PosB, but the floating toolbar is moved as if it's relative position is calculated by PosA.

Expected Results:
After opening the document, the floating toolbar should keep it's relative position to the document


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Xisco Faulí 2018-11-26 16:43:46 UTC
Thank you for reporting the bug. 
Could you please create and attach a screencast showing the steps?
There are various free screencast software available for use, including Camstudio (Windows), Jing (Mac), Simple Screen Recorder (Linux) or screencast-o-matic.com (Web).

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested screencast is provided.
Comment 2 Ilhan Yesil 2018-11-27 08:31:38 UTC
Created attachment 147059 [details]
Relative position of floating toolbar not saved correctly
Comment 3 Xisco Faulí 2019-03-13 18:31:27 UTC
Dear Ilhan Yesil,
This bug has been in ASSIGNED status for more than 3 months without any
activity. Resetting it to NEW.
Please assigned it back to yourself if you're still working on this.
Comment 4 Commit Notification 2019-03-21 17:51:44 UTC
Ilhan Yesil committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/428d5f2449df8556b87c22663a7a48d1eec06bb7%5E%21

tdf#121671 Floating toolbars remain their position after reopen

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-05-16 10:32:27 UTC
A polite ping to Ilhan Yesil:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
Otherwise, Could you please explain what's missing?
Thanks