tdf#121671 Floating toolbars remain their position after reopen

Calculate the relative position of the floating toolbars by calling
the ImplCallMove function, where the current position is read from
the real window.

Change-Id: I6a142055c3340dda2339980fbc5a7ebb431e228b
Reviewed-on: https://gerrit.libreoffice.org/64093
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>